[package]
name = "RandoRank"
version = "0.1.0"
authors = ["cassidoxa <cassidymoen@gmx.com>"]
edition = "2018"

[lib]
name = "randorank"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.10"
itertools = "0.8.2"
pyo3 = "0.8.5"

# for rust tests
# cargo test --no-default-features
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
